--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     ports:
       - "6379:6379"
     container_name: redis
+    command: redis-server --save "" --appendonly no
     
 volumes:
   postgres-data:
