--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,96 +1,33 @@
 aiodns==3.0.0
-aiofiles==0.7.0
 aiohttp==3.8.1
-aioredis==1.3.1
 aiosignal==1.2.0
-anyio==3.5.0
-APScheduler==3.9.1
-arrow==1.2.1
-asgiref==3.5.1
+anyio==3.6.1
 async-timeout==4.0.2
 attrs==21.4.0
-autopep8 @ file:///opt/conda/conda-bld/autopep8_1650463822033/work
-backports.zoneinfo==0.2.1
-blinker==1.4
-ccxt==1.90.88
-certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.3
-cryptography==37.0.2
-cycler==0.11.0
-Deprecated==1.2.13
-fastapi==0.74.0
-fonttools==4.33.3
+ccxt==1.91.11
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+click==8.1.3
+cryptography==37.0.4
+fastapi==0.79.0
 frozenlist==1.3.0
 h11==0.13.0
-hiredis==2.0.0
-httptools==0.2.0
 idna==3.3
-iniconfig==1.1.1
-iopath==0.1.9
-jesse==0.38.2
-kiwisolver==1.4.2
-lxml==4.8.0
-matplotlib==3.5.1
-mkl-fft==1.3.1
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1626186066731/work
-mkl-service==2.4.0
-mplfinance==0.12.8b6
 multidict==6.0.2
-multitasking==0.0.10
-newtulipy==0.4.6
-numpy==1.23.0
-numpy-groupies==0.9.14
-packaging==21.3
-pandas==1.4.0
-patsy==0.5.2
-peewee==3.14.8
-Pillow==9.1.0
-pluggy==1.0.0
-portalocker @ file:///tmp/build/80754af9/portalocker_1617133067286/work
-psycopg2-binary==2.9.2
-py==1.11.0
-pycares==4.1.2
-pycodestyle @ file:///tmp/build/80754af9/pycodestyle_1636635402688/work
+numpy==1.23.1
+pandas==1.4.3
+pycares==4.2.1
 pycparser==2.21
-pydantic==1.9.0
-pydash==5.1.0
-pyparsing==3.0.8
-pytest==6.2.5
+pydantic==1.9.1
 python-dateutil==2.8.2
-python-dotenv==0.19.2
 pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.2.0
-PyYAML==6.0
-QuantStats==0.0.47
-redis==4.1.4
-requests==2.26.0
-schedule==1.1.0
-scipy==1.8.0
-seaborn==0.11.2
-simplejson==3.16.0
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+requests==2.28.1
+six==1.16.0
 sniffio==1.2.0
-starlette==0.17.1
-statsmodels==0.13.2
+starlette==0.19.1
 ta==0.10.1
-TA-Lib==0.4.24
-tabulate==0.8.9
-timeloop==1.0.2
-tinydb==4.7.0
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tqdm @ file:///opt/conda/conda-bld/tqdm_1650891076910/work
-typing_extensions==4.2.0
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.9
-uvicorn==0.14.0
-uvloop==0.16.0
-watchgod==0.8.2
-websocket-client==1.2.3
-websockets==9.1
-wrapt==1.14.1
+typing_extensions==4.3.0
+urllib3==1.26.10
+uvicorn==0.18.2
 yarl==1.7.2
-yfinance==0.1.70
