--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -3,14 +3,13 @@ FROM python:3.9-slim
 ENV PYTHONBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
-RUN apt-get update && apt-get -y install && apt-get clean
+RUN apt-get update && apt-get -y install apt-get clean
 
 RUN pip install --upgrade pip
 
 COPY . /app
 
 WORKDIR /app
-
 
 RUN pip3 install -r Backend/requirements.txt
 
