--- a/.gitignore
+++ b/.gitignore
@@ -3,26 +3,29 @@
 /.vscode
 /jesse.egg-info
 /.idea
-Backend/storage/*.key
-Backend/storage/*.sqlite
-Backend/storage/*.gz
+live_backend/Testing/storage/*.key
+live_backend/Testing/storage/*.sqlite
+live_backend/Testing/storage/*.gz
 .DS_Store
 /.vagrant
-Backend/storage/temp/*.pickle
-Backend/storage/trades/*.json
-Backend/storage/trading-view-pine-editor/*.txt
-Backend/storage/temp/optimize/*.pickle
-Backend/storage/orders/*.json
-Backend/storage/logs/trades/*.json
-Backend/storage/logs/collect.txt
-Backend/storage/logs/optimize.txt
-Backend/storage/logs/live-trade.txt
-Backend/storage/logs/paper-trade.txt
-Backend/storage/genetics/*.txt
-Backend/storage/csv/*.csv
-Backend/storage/json/*.json
-Backend/storage/charts/*.png
-Backend/storage/full-reports/*.html
+live_backend/Testing/new_archive
+live_backend/Testing/archive
+live_backend/Testing/storage/temp/*.pickle
+live_backend/Testing/storage/trades/*.json
+live_backend/Testing/storage/trading-view-pine-editor/*.txt
+live_backend/Testing/storage/temp/optimize/*.pickle
+live_backend/Testing/storage/orders/*.json
+live_backend/Testing/storage/logs/trades/*.json
+live_backend/Testing/storage/logs/collect.txt
+live_backend/Testing/storage/logs/optimize.txt
+live_backend/Testing/storage/logs/live-trade.txt
+live_backend/Testing/storage/logs/paper-trade.txt
+live_backend/Testing/storage/genetics/*.txt
+live_backend/Testing/storage/csv/*.csv
+live_backend/Testing/storage/json/*.json
+live_backend/Testing/storage/charts/*.png
+live_backend/Testing/storage/full-reports/*.html
+
 *.pyc
 /__pycache__
 /venv
@@ -38,4 +41,4 @@ routes.py
 #################mine
 /venv
 
-Backend/storage/logs/*.txt
+live_backend/Testing/storage/logs/*.txt
