--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,112 @@
 aiodns==3.0.0
+aiofiles==0.7.0
 aiohttp==3.8.3
+aioredis==1.3.1
 aiosignal==1.3.1
 anyio==3.6.2
+appdirs==1.4.4
+arrow==1.2.1
+asgiref==3.6.0
+asttokens==2.2.1
 async-timeout==4.0.2
 attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+blinker==1.4
 ccxt==2.6.97
 certifi==2022.12.7
 cffi==1.15.1
-charset-normalizer==2.1.1
-click==8.1.3
+charset-normalizer==2.0.12
+click==8.0.3
+comm==0.1.2
 cryptography==39.0.0
-fastapi==0.89.1
+cycler==0.11.0
+debugpy==1.6.6
+decorator==5.1.1
+Deprecated==1.2.13
+executing==1.2.0
+fastapi==0.74.0
+fonttools==4.38.0
+frozendict==2.3.5
 frozenlist==1.3.3
 h11==0.14.0
+hiredis==2.2.2
+html5lib==1.1
 idna==3.4
+iniconfig==2.0.0
+ipykernel==6.21.2
+ipython==8.10.0
+jedi==0.18.2
+jesse==0.41.6
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+kiwisolver==1.4.4
+lxml==4.9.2
+matplotlib==3.5.1
+matplotlib-inline==0.1.6
+mplfinance==0.12.8b6
 multidict==6.0.4
-numpy==1.24.1
-pandas==1.5.3
+multitasking==0.0.11
+nest-asyncio==1.5.6
+newtulipy==0.4.6
+numpy==1.23.0
+numpy-groupies==0.9.14
+packaging==23.0
+pandas==1.4.0
+parso==0.8.3
+patsy==0.5.3
+peewee==3.14.8
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pip==22.3.1
+platformdirs==3.0.0
+pluggy==1.0.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+psycopg2-binary==2.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py==1.11.0
 pycares==4.3.0
 pycparser==2.21
 pydantic==1.10.4
+pydash==5.1.0
+pyparsing==3.0.9
+pytest==6.2.5
 python-dateutil==2.8.2
+python-dotenv==0.19.2
 pytz==2022.7.1
-requests==2.28.2
+PyWavelets==1.2.0
+pyzmq==25.0.0
+QuantStats==0.0.47
+redis==4.1.4
+requests==2.26.0
+scipy==1.8.0
+seaborn==0.12.2
+setuptools==65.6.3
+simplejson==3.16.0
 six==1.16.0
 sniffio==1.3.0
-starlette==0.22.0
+soupsieve==2.4
+stack-data==0.6.2
+starlette==0.17.1
+statsmodels==0.13.2
 ta==0.10.2
+TA-Lib==0.4.24
+tabulate==0.8.9
+timeloop==1.0.2
+toml==0.10.2
+tornado==6.2
+traitlets==5.9.0
 typing_extensions==4.4.0
 urllib3==1.26.14
-uvicorn==0.20.0
+uvicorn==0.14.0
+wcwidth==0.2.6
+webencodings==0.5.1
+websocket-client==1.2.3
+websockets==9.1
+wheel==0.38.4
+wrapt==1.14.1
 yarl==1.8.2
+yfinance==0.2.12
