--- a/testing/.env.example
+++ b/testing/.env.example
@@ -35,24 +35,62 @@ ERROR_TELEGRAM_BOT_TOKEN=
 ERROR_TELEGRAM_BOT_CHAT_ID=
 ERROR_DISCORD_WEBHOOK=
 
+# # # # # # # # # # #
+# ======= Bitget
+# # # # # # # # # # #
+
+# USDT Futures https://www.bitget.com/en/mix/usdt/BTCUSDT_UMCBL
+BITGET_USDT_PERPETUAL_API_KEY=
+BITGET_USDT_PERPETUAL_API_SECRET=
+BITGET_USDT_PERPETUAL_API_PASSPHRASE=
+
+# # # # # # # # # # #
+# ======= Binance
+# # # # # # # # # # #
+
 # Testnet Binance Futures (http://testnet.binancefuture.com)
-TESTNET_BINANCE_FUTURES_API_KEY=x
-TESTNET_BINANCE_FUTURES_API_SECRET=
+BINANCE_PERPETUAL_FUTURES_TESTNET_API_KEY=
+BINANCE_PERPETUAL_FUTURES_TESTNET_API_SECRET=
 
 # Binance Futures (https://www.binance.com/en/futures/btcusdt)
-BINANCE_FUTURES_API_KEY=
-BINANCE_FUTURES_API_SECRET=
+BINANCE_PERPETUAL_FUTURES_API_KEY=
+BINANCE_PERPETUAL_FUTURES_API_SECRET=
 
-# FTX Futures (https://ftx.com/markets/future)
-FTX_FUTURES_API_KEY=
-FTX_FUTURES_API_SECRET=
-# leave empty if it's the main account and not a subaccount
-FTX_FUTURES_SUBACCOUNT_NAME=
+# Binance Spot (https://www.binance.com/en/trade/BTC_USDT?type=spot)
+BINANCE_SPOT_API_KEY=
+BINANCE_SPOT_API_SECRET=
 
-# Testnet Bybit Perpetuals (https://testnet.bybit.com/trade/usdt/BTCUSDT)
-TESTNET_BYBIT_PERPETUAL_API_KEY=
-TESTNET_BYBIT_PERPETUAL_API_SECRET=
+# Binance US Spot (https://www.binance.us)
+BINANCE_US_SPOT_API_KEY=
+BINANCE_US_SPOT_API_SECRET=
 
-# Bybit Perpetuals (https://www.bybit.com/trade/usdt/BTCUSDT)
-BYBIT_PERPETUAL_API_KEY=
-BYBIT_PERPETUAL_API_SECRET=
+# # # # # # # # #
+# ======= Bybit
+# # # # # # # # #
+
+# Testnet Bybit Perpetual (https://testnet.bybit.com/trade/usdt/BTCUSDT)
+BYBIT_USDT_PERPETUAL_TESTNET_API_KEY=
+BYBIT_USDT_PERPETUAL_TESTNET_API_SECRET=
+
+# Bybit Perpetual (https://www.bybit.com/trade/usdt/BTCUSDT)
+BYBIT_USDT_PERPETUAL_API_KEY=
+BYBIT_USDT_PERPETUAL_API_SECRET=
+
+# # # # # # # # #
+# ======= DYDX
+# # # # # # # # #
+
+# DYDX Perpetual Testnet (https://trade.stage.dydx.exchange/trade/ETH-USD)
+DYDX_PERPETUAL_TESTNET_API_KEY=
+DYDX_PERPETUAL_TESTNET_API_SECRET=
+DYDX_PERPETUAL_TESTNET_API_PASSPHRASE=
+DYDX_PERPETUAL_TESTNET_WALLET_ADDRESS=
+DYDX_PERPETUAL_TESTNET_STARK_PRIVATE_KEY=
+
+# DYDX Perpetual (https://jesse.trade/dydx)
+DYDX_PERPETUAL_API_KEY=
+DYDX_PERPETUAL_API_SECRET=
+DYDX_PERPETUAL_API_PASSPHRASE=
+DYDX_PERPETUAL_WALLET_ADDRESS=
+DYDX_PERPETUAL_STARK_PRIVATE_KEY=
+
