--- a/testing/docker/docker-compose.yml
+++ b/testing/docker/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./postgres-data:/var/lib/postgresql/data
     container_name: postgres
 
   ### Redis ################################################
